--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       <span>d</span>
       <span>g</span>
       <span>y</span>
-      <!-- <span>t</span>
+      <span>t</span>
       <span>h</span>
       <span>e</span>
       <span>a</span>
       <span>r</span>
-      <span>t</span> -->
+      <span>t</span>
     </div>
   </div>
 </div>
